--- a/directbak.yaml
+++ b/directbak.yaml
@@ -853,7 +853,6 @@ payload:
   - '+.1066888.com'
   - '+.1073.com'
   - '+.107788.com'
-  - '+.1078899.com'
   - '+.1080prmvb.com'
   - '+.108101.xyz'
   - '+.108105.xyz'
@@ -1960,7 +1959,6 @@ payload:
   - '+.1yd.me'
   - '+.1yee.com'
   - '+.1ykh.com'
-  - '+.1yltao.com'
   - '+.1yun.cc'
   - '+.1yyg.com'
   - '+.1zhangdan.com'
@@ -6150,7 +6148,6 @@ payload:
   - '+.84684.net'
   - '+.8477.com'
   - '+.848.com'
-  - '+.8498899.com'
   - '+.849959.com'
   - '+.84dwc.com'
   - '+.84fk.com'
@@ -9327,7 +9324,6 @@ payload:
   - '+.astfc.com'
   - '+.asthis.net'
   - '+.astorpiano.com'
-  - '+.astrocn.org'
   - '+.astron.ac'
   - '+.astropulsion.com'
   - '+.asussmart.com'
@@ -12747,6 +12743,7 @@ payload:
   - '+.cazpw.com'
   - '+.cbca.net'
   - '+.cbcie.com'
+  - '+.cbdcn.com'
   - '+.cbdio.com'
   - '+.cbdjrsh.org'
   - '+.cbe21.com'
@@ -14486,6 +14483,7 @@ payload:
   - '+.chinaqking.com'
   - '+.chinaql.org'
   - '+.chinaqoe.net'
+  - '+.chinaquest.com'
   - '+.chinaquickpcb.com'
   - '+.chinaqw.com'
   - '+.chinarayying.com'
@@ -20426,6 +20424,7 @@ payload:
   - '+.eduglobalchina.com'
   - '+.eduiso.com'
   - '+.edujia.com'
+  - '+.edujianshe.com'
   - '+.edumail.pub'
   - '+.eduour.com'
   - '+.edupm.com'
@@ -22659,6 +22658,7 @@ payload:
   - '+.fqgj.net'
   - '+.fqis.xin'
   - '+.fqnovel.com'
+  - '+.fqnovelstatic.com'
   - '+.fqpai.com'
   - '+.fqsszx.com'
   - '+.fqxs.org'
@@ -24581,6 +24581,7 @@ payload:
   - '+.gstarcad.com'
   - '+.gstdt.com'
   - '+.gstonegames.com'
+  - '+.gsxb.net'
   - '+.gsxcdn.com'
   - '+.gsxservice.com'
   - '+.gsxtj.com'
@@ -33134,7 +33135,6 @@ payload:
   - '+.justalkcloud.com'
   - '+.justbilt.com'
   - '+.justbon.com'
-  - '+.justdo.tv'
   - '+.justdojava.com'
   - '+.justep.com'
   - '+.justering.com'
@@ -37820,6 +37820,7 @@ payload:
   - '+.mamicode.com'
   - '+.mamilist.com'
   - '+.mamioo.com'
+  - '+.mamoe.net'
   - '+.mamsh.org'
   - '+.managershare.com'
   - '+.manben.com'
@@ -38241,6 +38242,7 @@ payload:
   - '+.meet99.com'
   - '+.meetfave.com'
   - '+.meethall.com'
+  - '+.meetingmeet.com'
   - '+.meetlawyer.com'
   - '+.meetsite.com'
   - '+.meetwhale.com'
@@ -39793,7 +39795,6 @@ payload:
   - '+.mux5.com'
   - '+.muxin.fun'
   - '+.muxiulin.com'
-  - '+.muxufang.com'
   - '+.muyangkuaibao.com'
   - '+.muyee.com'
   - '+.muyewx.com'
@@ -45578,6 +45579,7 @@ payload:
   - '+.rf.hk'
   - '+.rf.tm'
   - '+.rfaexpo.com'
+  - '+.rfc2cn.com'
   - '+.rfchina.com'
   - '+.rfcreader.com'
   - '+.rfctyy.com'
@@ -48579,7 +48581,6 @@ payload:
   - '+.sjzbwx.com'
   - '+.sjzcmw.com'
   - '+.sjzcsw.com'
-  - '+.sjzdbs.com'
   - '+.sjzhu.com'
   - '+.sjzhushou.com'
   - '+.sjzkz.com'
@@ -61250,6 +61251,7 @@ payload:
   - '+.ynhl.net'
   - '+.ynho.com'
   - '+.ynhouse.com'
+  - '+.ynhzm.com'
   - '+.yni84.com'
   - '+.ynianyongheng.com'
   - '+.ynikon.com'
