--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1392,7 +1392,6 @@ payload:
   - '+.16816.com'
   - '+.16838.com'
   - '+.1684.cc'
-  - '+.1684sm.com'
   - '+.1688.com'
   - '+.16885.com'
   - '+.16886000.com'
@@ -1710,7 +1709,6 @@ payload:
   - '+.188app.xyz'
   - '+.188bifen.com'
   - '+.188diaoche.com'
-  - '+.188doc.com'
   - '+.188hi.com'
   - '+.188lanxi.com'
   - '+.188mb.com'
@@ -3254,7 +3252,6 @@ payload:
   - '+.3dmumu.com'
   - '+.3dnew.com'
   - '+.3doe.com'
-  - '+.3dsc.com'
   - '+.3dsjw.com'
   - '+.3dsnail.com'
   - '+.3dtank.com'
@@ -6096,7 +6093,6 @@ payload:
   - '+.81tt.net'
   - '+.81xy.com'
   - '+.81yy.cc'
-  - '+.81zw.co'
   - '+.81zw.com'
   - '+.81zw.us'
   - '+.8203app.com'
@@ -11855,7 +11851,6 @@ payload:
   - '+.bq8xs.com'
   - '+.bqatj.com'
   - '+.bqfy.com'
-  - '+.bqg26.com'
   - '+.bqg8.cc'
   - '+.bqg8.la'
   - '+.bqg99.cc'
@@ -12399,7 +12394,6 @@ payload:
   - '+.cacfo.com'
   - '+.cacg.cc'
   - '+.cachekit.com'
-  - '+.cachepro.com'
   - '+.cachetime.com'
   - '+.cackui.com'
   - '+.cacpp.com'
@@ -17935,7 +17929,6 @@ payload:
   - '+.dcsjw.com'
   - '+.dcsme.org'
   - '+.dcv.so'
-  - '+.dcwj168.com'
   - '+.dcxnews.com'
   - '+.dczou.com'
   - '+.dd-advisor.com'
@@ -18788,7 +18781,6 @@ payload:
   - '+.djstg.com'
   - '+.dju8.com'
   - '+.djwcp.com'
-  - '+.djwxw.com'
   - '+.djxfar6.com'
   - '+.djyde.com'
   - '+.djye.com'
@@ -23927,6 +23919,7 @@ payload:
   - '+.gitsea.com'
   - '+.gitv.tv'
   - '+.gityuan.com'
+  - '+.gityx.com'
   - '+.giuem.com'
   - '+.giveda.com'
   - '+.giveme5.cc'
@@ -23939,6 +23932,7 @@ payload:
   - '+.gjcdn.vip'
   - '+.gjceshi9.com'
   - '+.gjds.vip'
+  - '+.gjdwzp.com'
   - '+.gjfax.com'
   - '+.gjgwy.net'
   - '+.gjgwy.org'
@@ -25913,7 +25907,6 @@ payload:
   - '+.haoyangmao8.com'
   - '+.haoyao.com'
   - '+.haoychuang.com'
-  - '+.haoyhq.com'
   - '+.haoyisheng.com'
   - '+.haoyishui.com'
   - '+.haoyong.cc'
@@ -26719,7 +26712,6 @@ payload:
   - '+.hfswcz.com'
   - '+.hftfund.com'
   - '+.hftogo.com'
-  - '+.hfwx.net'
   - '+.hfx.link'
   - '+.hfx.net'
   - '+.hfyestar.com'
@@ -29603,6 +29595,7 @@ payload:
   - '+.ihaveu.com'
   - '+.ihaveu.net'
   - '+.ihdt.tv'
+  - '+.ihdty.com'
   - '+.ihebi.info'
   - '+.ihei5.com'
   - '+.iheima.com'
@@ -32145,6 +32138,7 @@ payload:
   - '+.jitongtianxia.com'
   - '+.jitu5.com'
   - '+.jitucdn.com'
+  - '+.jitudisk.com'
   - '+.jituofuture.com'
   - '+.jituwang.com'
   - '+.jiubuhua.com'
@@ -33057,7 +33051,6 @@ payload:
   - '+.juneyaoairlines.com'
   - '+.jungebb.com'
   - '+.junhe.com'
-  - '+.junhongjc.com'
   - '+.junhuisoft.com'
   - '+.juniu.tv'
   - '+.junjiahao.com'
@@ -35069,7 +35062,6 @@ payload:
   - '+.langlangchinese.com'
   - '+.langlangjiajiao.com'
   - '+.langlib.com'
-  - '+.langlinking.com'
   - '+.langlive.com'
   - '+.langlvseo.com'
   - '+.langmanzg.com'
@@ -37858,7 +37850,6 @@ payload:
   - '+.mangxuewang.com'
   - '+.mangzitian.com'
   - '+.manhua1.com'
-  - '+.manhua123.net'
   - '+.manhua365.com'
   - '+.manhua456.com'
   - '+.manhuaba.cc'
@@ -44749,7 +44740,6 @@ payload:
   - '+.qstatic.com'
   - '+.qstbg.com'
   - '+.qstsking.com'
-  - '+.qsw.la'
   - '+.qsw521.com'
   - '+.qswhcb.com'
   - '+.qswzayy.com'
@@ -47167,7 +47157,6 @@ payload:
   - '+.shanghai-intex.com'
   - '+.shanghai-map.net'
   - '+.shanghaiairport.com'
-  - '+.shanghaiboji.com'
   - '+.shanghaiboxu.com'
   - '+.shanghaicaiyi.com'
   - '+.shanghaichannel.net'
@@ -49100,6 +49089,7 @@ payload:
   - '+.songzhaopian.com'
   - '+.songzi100.com'
   - '+.songziren.com'
+  - '+.songzixian.com'
   - '+.sonhoo.com'
   - '+.sonhoo.net'
   - '+.soniu.net'
@@ -51127,7 +51117,6 @@ payload:
   - '+.techgastronomy.com'
   - '+.techgogogo.com'
   - '+.techingrid.net'
-  - '+.techkedu.com'
   - '+.techmiao.com'
   - '+.technode.com'
   - '+.techoke.com'
@@ -53213,7 +53202,6 @@ payload:
   - '+.ucziliao.com'
   - '+.uczzd.com'
   - '+.uczzd.net'
-  - '+.ud783c02.com'
   - '+.udache.com'
   - '+.udalogistic.com'
   - '+.udamall.com'
@@ -53880,7 +53868,6 @@ payload:
   - '+.vandream.com'
   - '+.vanfo.net'
   - '+.vanfun.com'
-  - '+.vanggame.com'
   - '+.vangotech.com'
   - '+.vankang.com'
   - '+.vanke.com'
@@ -53991,7 +53978,6 @@ payload:
   - '+.ververica.com'
   - '+.veryapex.com'
   - '+.verybeaut.com'
-  - '+.verycaca.com'
   - '+.verycd.com'
   - '+.verycdn.net'
   - '+.verydns.net'
@@ -55143,7 +55129,6 @@ payload:
   - '+.wecatch.me'
   - '+.wecenter.com'
   - '+.weceshi.com'
-  - '+.wechat.ba'
   - '+.wechat.com'
   - '+.wechat.org'
   - '+.wechat007.com'
@@ -57945,7 +57930,6 @@ payload:
   - '+.xiaoeryi.com'
   - '+.xiaofangdeng.com'
   - '+.xiaofantian.com'
-  - '+.xiaofany.com'
   - '+.xiaofeng.org'
   - '+.xiaogan.com'
   - '+.xiaogj.com'
@@ -58888,7 +58872,6 @@ payload:
   - '+.xjxbx.com'
   - '+.xjyaxin.com'
   - '+.xjyou88.com'
-  - '+.xjyqly.com'
   - '+.xjytjt.com'
   - '+.xjzdjx.com'
   - '+.xjzhongwu.com'
@@ -59254,7 +59237,6 @@ payload:
   - '+.xspliter.com'
   - '+.xsrtvu.com'
   - '+.xsshuku.com'
-  - '+.xssk.net'
   - '+.xsslyjt.com'
   - '+.xsstomy.com'
   - '+.xssz.net'
@@ -59720,7 +59702,6 @@ payload:
   - '+.xyfw.org'
   - '+.xyg688.com'
   - '+.xygmed.com'
-  - '+.xygyhd.org'
   - '+.xyhc.com'
   - '+.xyhis.com'
   - '+.xyhlcd.com'
@@ -59933,7 +59914,6 @@ payload:
   - '+.yangdongjia.com'
   - '+.yangerxiao.com'
   - '+.yangfannie.com'
-  - '+.yangfawen.net'
   - '+.yangfd.com'
   - '+.yangge.me'
   - '+.yangguanjun.com'
@@ -60044,7 +60024,6 @@ payload:
   - '+.yanyijiameng.com'
   - '+.yanyijingling.com'
   - '+.yanyiwu.com'
-  - '+.yanyuzw.com'
   - '+.yanzhiwu.com'
   - '+.yanzoujia.net'
   - '+.yao.com'
@@ -61192,7 +61171,6 @@ payload:
   - '+.ymjm.net'
   - '+.ymlfxp.com'
   - '+.ymlinks.com'
-  - '+.ymlykj.com'
   - '+.ymm56.com'
   - '+.ymmfa.com'
   - '+.ymmzb.com'
@@ -63283,6 +63261,7 @@ payload:
   - '+.zgystsd.com'
   - '+.zgyxsw.org'
   - '+.zgyygl.com'
+  - '+.zgzb.com'
   - '+.zgzcw.com'
   - '+.zgzcwy.com'
   - '+.zgzjzzs.com'
@@ -65034,7 +65013,6 @@ payload:
   - '+.ztcadx.com'
   - '+.ztch.ltd'
   - '+.ztcia.com'
-  - '+.ztcj365.com'
   - '+.ztdad.com'
   - '+.zte.net'
   - '+.ztedevice.com'
@@ -65286,7 +65264,6 @@ payload:
   - '+.zxdoo.com'
   - '+.zxdu.net'
   - '+.zxdyw.com'
-  - '+.zxe-china.com'
   - '+.zxerp.com'
   - '+.zxgj56.com'
   - '+.zxgongshui.com'
