--- a/directbak.yaml
+++ b/directbak.yaml
@@ -655,6 +655,7 @@ payload:
   - '+.0a.fit'
   - '+.0bug.org'
   - '+.0car0.com'
+  - '+.0cname.com'
   - '+.0d.work'
   - '+.0daily.com'
   - '+.0dayhack.net'
@@ -1415,6 +1416,7 @@ payload:
   - '+.168kn.com'
   - '+.168lyq.com'
   - '+.168manhua.com'
+  - '+.168mlj.com'
   - '+.168moliao.com'
   - '+.168pd.com'
   - '+.168rcw.com'
@@ -1785,7 +1787,6 @@ payload:
   - '+.1988.tv'
   - '+.19888.tv'
   - '+.1988wp.com'
-  - '+.1988zp.com'
   - '+.198game.com'
   - '+.198game.net'
   - '+.198w.net'
@@ -2473,6 +2474,7 @@ payload:
   - '+.2fc5.com'
   - '+.2fz1.com'
   - '+.2g88.vip'
+  - '+.2gdt.com'
   - '+.2geh.com'
   - '+.2gei.com'
   - '+.2google.com'
@@ -3241,6 +3243,7 @@ payload:
   - '+.3dkk.com'
   - '+.3dkunshan.com'
   - '+.3dllc.cc'
+  - '+.3dllc.com'
   - '+.3dly.com'
   - '+.3dmax8.com'
   - '+.3dmaxvip.com'
@@ -3523,7 +3526,6 @@ payload:
   - '+.44england.com'
   - '+.44hyk.com'
   - '+.44pd.com'
-  - '+.44pq.cc'
   - '+.44pq.co'
   - '+.44vs.com'
   - '+.453600.net'
@@ -4155,6 +4157,7 @@ payload:
   - '+.51speeds.com'
   - '+.51spjx.com'
   - '+.51suitui.com'
+  - '+.51sutong.com'
   - '+.51sxue.com'
   - '+.51syoo.com'
   - '+.51talk.com'
@@ -4419,7 +4422,6 @@ payload:
   - '+.52cik.com'
   - '+.52ckd.com'
   - '+.52click.net'
-  - '+.52codes.net'
   - '+.52da.com'
   - '+.52daohang.com'
   - '+.52debug.net'
@@ -4664,6 +4666,7 @@ payload:
   - '+.54traveler.com'
   - '+.54tusi.com'
   - '+.54up.net'
+  - '+.54xiaoshuo.com'
   - '+.54yt.net'
   - '+.54yuqing.com'
   - '+.55.cc'
@@ -5219,6 +5222,7 @@ payload:
   - '+.61baobao.com'
   - '+.61bb.com'
   - '+.61bbw.com'
+  - '+.61cloud.net'
   - '+.61co.com'
   - '+.61diy.com'
   - '+.61draw.com'
@@ -6172,6 +6176,7 @@ payload:
   - '+.860598.com'
   - '+.860816.com'
   - '+.861522.com'
+  - '+.8616.at'
   - '+.86175.com'
   - '+.861817.com'
   - '+.86215.com'
@@ -7075,7 +7080,6 @@ payload:
   - '+.99downer.com'
   - '+.99dushu.com'
   - '+.99dw.com'
-  - '+.99edu.net'
   - '+.99eo.com'
   - '+.99eyao.com'
   - '+.99fang.com'
@@ -7195,6 +7199,7 @@ payload:
   - '+.9juewu.com'
   - '+.9jx.com'
   - '+.9k9by.com'
+  - '+.9k9k.com'
   - '+.9k9ms.com'
   - '+.9kd.com'
   - '+.9kld.com'
@@ -10354,7 +10359,6 @@ payload:
   - '+.bdfzgz.net'
   - '+.bdgamelive.com'
   - '+.bdgslb.com'
-  - '+.bdhuakan.com'
   - '+.bdimg.com'
   - '+.bdinfo.net'
   - '+.bditong.com'
@@ -11037,11 +11041,13 @@ payload:
   - '+.biqutxt.com'
   - '+.biquw.com'
   - '+.biquwo.com'
+  - '+.biquwo.net'
   - '+.biquwu.cc'
   - '+.biquwx.la'
   - '+.biquxs.com'
   - '+.biquyue.com'
   - '+.biquyun.com'
+  - '+.biqwo.com'
   - '+.biransign.com'
   - '+.bird4d.com'
   - '+.birdbro.com'
@@ -11481,6 +11487,7 @@ payload:
   - '+.blenderget.com'
   - '+.blessedbin.com'
   - '+.bliao.com'
+  - '+.blibao.com'
   - '+.blibee.com'
   - '+.blibee.net'
   - '+.blimage.com'
@@ -11557,6 +11564,7 @@ payload:
   - '+.blueslc.tech'
   - '+.bluestar-pc.com'
   - '+.bluestep.cc'
+  - '+.blw.moe'
   - '+.blyol.com'
   - '+.blyun.com'
   - '+.bm001.com'
@@ -11815,6 +11823,7 @@ payload:
   - '+.bouffalolab.com'
   - '+.boweifeng.com'
   - '+.bowerp.com'
+  - '+.bowlplus.com'
   - '+.bowuzhi.fm'
   - '+.boxgu.com'
   - '+.boxopened.com'
@@ -11934,6 +11943,7 @@ payload:
   - '+.bsrkt.com'
   - '+.bssrvdns.com'
   - '+.bst24.com'
+  - '+.bstatics.com'
   - '+.bsteel.net'
   - '+.bstinfo.com'
   - '+.bstjiaoyu.com'
@@ -13382,6 +13392,9 @@ payload:
   - '+.ceve-market.org'
   - '+.cevsn.com'
   - '+.cezxda.com'
+  - '+.cf-china.info'
+  - '+.cf-ns.com'
+  - '+.cf-ns.net'
   - '+.cf.com'
   - '+.cf027.com'
   - '+.cf69.com'
@@ -13877,6 +13890,7 @@ payload:
   - '+.chenrunjinshu.com'
   - '+.chenshipin.com'
   - '+.chensonglin.net'
+  - '+.chensuyang.com'
   - '+.chenty.com'
   - '+.chenxi-sh.com'
   - '+.chenxinghb.com'
@@ -17438,14 +17452,12 @@ payload:
   - '+.dahua8.com'
   - '+.dahuaab.com'
   - '+.dahuaddns.com'
-  - '+.dahuangmei.com'
   - '+.dahuatech.com'
   - '+.dahuawang.com'
   - '+.dahuifuwu.com'
   - '+.dahuitu.net'
   - '+.dahulu.com'
   - '+.dahuoji.biz'
-  - '+.dai35.com'
   - '+.dai361.com'
   - '+.dai911.com'
   - '+.daibi.com'
@@ -20981,6 +20993,7 @@ payload:
   - '+.ershouhui.com'
   - '+.ert295.com'
   - '+.ert7.com'
+  - '+.ertmineq.com'
   - '+.ertongkongjian.com'
   - '+.ertongtuku.com'
   - '+.ertongyouleshebei.com'
@@ -21277,7 +21290,6 @@ payload:
   - '+.expirepausedns.com'
   - '+.expku.com'
   - '+.expo-china.com'
-  - '+.expobbs.com'
   - '+.expoeye.net'
   - '+.exponingbo.com'
   - '+.expoon.com'
@@ -21701,6 +21713,7 @@ payload:
   - '+.fapiao.com'
   - '+.fapiao365.com'
   - '+.fapiaobang.com'
+  - '+.faqianjia.com'
   - '+.faqrobot.org'
   - '+.far123.com'
   - '+.far2000.com'
@@ -22719,7 +22732,6 @@ payload:
   - '+.fromgeek.com'
   - '+.fromhomelearn.com'
   - '+.fromwiz.com'
-  - '+.frontenddev.org'
   - '+.frontjs.com'
   - '+.frontopen.com'
   - '+.frontwize.com'
@@ -24612,6 +24624,7 @@ payload:
   - '+.gtm-a1b4.com'
   - '+.gtm-a1b6.com'
   - '+.gtm-a1b7.com'
+  - '+.gtm-a2b2.com'
   - '+.gtm-a2b3.com'
   - '+.gtm-a2b4.com'
   - '+.gtm-a2b6.com'
@@ -26033,7 +26046,6 @@ payload:
   - '+.hbcdc.com'
   - '+.hbcg.cc'
   - '+.hbchen.com'
-  - '+.hbchy.net'
   - '+.hbciqtc.com'
   - '+.hbcjaq.com'
   - '+.hbcjh.net'
@@ -26393,6 +26405,7 @@ payload:
   - '+.hechangquan.com'
   - '+.hechengbb.com'
   - '+.heclouds.com'
+  - '+.hecoe.com'
   - '+.heconns.com'
   - '+.hecpharm.com'
   - '+.hedaotang.net'
@@ -26898,6 +26911,7 @@ payload:
   - '+.himigame.com'
   - '+.himiku.com'
   - '+.himofi.com'
+  - '+.himuzik.net'
   - '+.himy2.com'
   - '+.hinabian.com'
   - '+.hinavi.net'
@@ -27004,6 +27018,7 @@ payload:
   - '+.hjgjmy.com'
   - '+.hjhanjy.com'
   - '+.hjhrcloud.com'
+  - '+.hjido.com'
   - '+.hjiesuan.com'
   - '+.hjjg.com'
   - '+.hjjh.com'
@@ -28370,6 +28385,7 @@ payload:
   - '+.hunanzhibo.com'
   - '+.hunbei.com'
   - '+.hunbei1.com'
+  - '+.hunbei3.com'
   - '+.hunbei4.com'
   - '+.hunbei5.com'
   - '+.hunbohui.info'
@@ -30598,6 +30614,7 @@ payload:
   - '+.itaoke.org'
   - '+.itaokecms.com'
   - '+.itaotuo.com'
+  - '+.itaoyun.com'
   - '+.itavcn.com'
   - '+.itazhi.com'
   - '+.itbegin.com'
@@ -32698,6 +32715,7 @@ payload:
   - '+.jrkantv.com'
   - '+.jrlady.com'
   - '+.jrmf360.com'
+  - '+.jrnba.cc'
   - '+.jrpxw.com'
   - '+.jrqiwen.com'
   - '+.jrqzw.net'
@@ -32711,6 +32729,7 @@ payload:
   - '+.jryghq.com'
   - '+.jrysdq.com'
   - '+.jryzt.com'
+  - '+.jrzg84.com'
   - '+.jrzj.com'
   - '+.jrzp.com'
   - '+.js-aerfa.com'
@@ -34499,7 +34518,6 @@ payload:
   - '+.ktfdsb.com'
   - '+.kting.info'
   - '+.ktjd.net'
-  - '+.ktkj.com'
   - '+.ktkt.com'
   - '+.ktlshu.vip'
   - '+.ktlstbg.com'
@@ -34708,6 +34726,7 @@ payload:
   - '+.kumankeji.net'
   - '+.kumaoyun.com'
   - '+.kumifeng.com'
+  - '+.kunfpuz.com'
   - '+.kungfucloud.com'
   - '+.kungfuenglish.com'
   - '+.kunguankeji.com'
@@ -36618,6 +36637,7 @@ payload:
   - '+.lmwljz.com'
   - '+.lmxxxz.com'
   - '+.lmyd5.com'
+  - '+.lmyidc.com'
   - '+.lnamphp.com'
   - '+.lncldapi.com'
   - '+.lncnw.com'
@@ -39315,6 +39335,7 @@ payload:
   - '+.moerlong.com'
   - '+.moetu.org'
   - '+.moetuji.com'
+  - '+.moeub.com'
   - '+.moew.xyz'
   - '+.moeyue.com'
   - '+.moezu.com'
@@ -40125,7 +40146,6 @@ payload:
   - '+.mywang.net'
   - '+.mywayboo.net'
   - '+.myweimai.com'
-  - '+.mywh.com'
   - '+.mywll.com'
   - '+.mywood.cc'
   - '+.myxypt.com'
@@ -40323,6 +40343,7 @@ payload:
   - '+.nbahero.com'
   - '+.nbahi.com'
   - '+.nbahjx.com'
+  - '+.nball.cc'
   - '+.nbaqmq.com'
   - '+.nbayaobasketballclub.com'
   - '+.nbazww.com'
@@ -40823,7 +40844,6 @@ payload:
   - '+.niuliangyun.com'
   - '+.niuniufund.com'
   - '+.niuniutui.com'
-  - '+.niuniuwan.com'
   - '+.niupinhui.com'
   - '+.niupu.com'
   - '+.niuqia.com'
@@ -42005,6 +42025,7 @@ payload:
   - '+.oushivoyages.com'
   - '+.ousns.net'
   - '+.outlets365.com'
+  - '+.outletscn.com'
   - '+.ouvps.com'
   - '+.ouxiangxiezhen.com'
   - '+.ouyabosi.com'
@@ -43744,7 +43765,6 @@ payload:
   - '+.qdthgs.com'
   - '+.qdtongxinedu.net'
   - '+.qdtvu.com'
-  - '+.qdtz.com'
   - '+.qdwenxue.com'
   - '+.qdwght.com'
   - '+.qdwsb.com'
@@ -43787,6 +43807,7 @@ payload:
   - '+.qfun.com'
   - '+.qg.net'
   - '+.qg108.com'
+  - '+.qgbnzb.com'
   - '+.qgbtd.com'
   - '+.qgbzyzl.com'
   - '+.qgcyjq.org'
@@ -45105,6 +45126,7 @@ payload:
   - '+.qyer.com'
   - '+.qyerstatic.com'
   - '+.qyfwc.com'
+  - '+.qyg12.com'
   - '+.qyglzz.com'
   - '+.qygzbxpt.com'
   - '+.qyham.com'
@@ -45127,6 +45149,7 @@ payload:
   - '+.qytxhy.com'
   - '+.qyule.org'
   - '+.qyvqg.com'
+  - '+.qywww.net'
   - '+.qyxxpd.com'
   - '+.qyyqyj.com'
   - '+.qyzba.club'
@@ -46029,7 +46052,6 @@ payload:
   - '+.ruixunidc.net'
   - '+.ruiyang-ra.com'
   - '+.ruiyunit.com'
-  - '+.ruizhiy.com'
   - '+.ruizong-gz.com'
   - '+.rujiazg.com'
   - '+.ruketang.com'
@@ -46499,6 +46521,7 @@ payload:
   - '+.scihubtw.tw'
   - '+.sciimg.com'
   - '+.scijuyi.com'
+  - '+.scimall.org'
   - '+.scimao.com'
   - '+.scinno-cn.com'
   - '+.scinormem.com'
@@ -47164,7 +47187,6 @@ payload:
   - '+.shanghaicup.com'
   - '+.shanghaidaily.com'
   - '+.shanghaidisneyresort.com'
-  - '+.shanghaiferry.com'
   - '+.shanghaihino.com'
   - '+.shanghaihuanli.com'
   - '+.shanghaiiot.org'
@@ -47310,6 +47332,7 @@ payload:
   - '+.shb02.com'
   - '+.shbaimeng.com'
   - '+.shbangde.com'
+  - '+.shbangdian.com'
   - '+.shbars.com'
   - '+.shbbq.net'
   - '+.shbear.com'
@@ -47338,6 +47361,7 @@ payload:
   - '+.shcymc.com'
   - '+.shdctp.com'
   - '+.shdjt.com'
+  - '+.shdmt.net'
   - '+.shdrkj.com'
   - '+.shdsd.com'
   - '+.shdzby168.com'
@@ -48129,6 +48153,7 @@ payload:
   - '+.shuyun.com'
   - '+.shuzhi9.com'
   - '+.shuzhiduo.com'
+  - '+.shuzhou.cc'
   - '+.shuzibao.com'
   - '+.shuziju.com'
   - '+.shuzixiaoyuan.com'
@@ -49210,6 +49235,7 @@ payload:
   - '+.sourl.co'
   - '+.sousea.com'
   - '+.soushai.com'
+  - '+.soushu.vip'
   - '+.soushuking.com'
   - '+.sousou.com'
   - '+.sousoudus.com'
@@ -51783,7 +51809,6 @@ payload:
   - '+.tj-zt.com'
   - '+.tj0573.com'
   - '+.tj20.com'
-  - '+.tjabjm.com'
   - '+.tjaide.com'
   - '+.tjashy.com'
   - '+.tjbearing.com'
@@ -52389,6 +52414,7 @@ payload:
   - '+.trsol.com'
   - '+.trt.hk'
   - '+.trtb.net'
+  - '+.trucklc.com'
   - '+.trueart.com'
   - '+.truebuty.com'
   - '+.truechat365.com'
@@ -54343,7 +54369,6 @@ payload:
   - '+.vpser.net'
   - '+.vpsjie.com'
   - '+.vpsjxw.com'
-  - '+.vpskk.com'
   - '+.vpsmm.com'
   - '+.vpsor.com'
   - '+.vpsqb.com'
@@ -54838,7 +54863,6 @@ payload:
   - '+.wannuoda.com'
   - '+.wanqianyun.com'
   - '+.wanquankan.com'
-  - '+.wanrenxing.net'
   - '+.wansege.info'
   - '+.wansf.com'
   - '+.wanshahao.com'
@@ -55966,6 +55990,7 @@ payload:
   - '+.whysodiao.com'
   - '+.whysx.com'
   - '+.whyungu.com'
+  - '+.whyxysp.com'
   - '+.whyyy.com'
   - '+.whzb.com'
   - '+.whzblawson.com'
@@ -56399,7 +56424,6 @@ payload:
   - '+.woaizuji.com'
   - '+.woaoo.net'
   - '+.wobenben.com'
-  - '+.wobiquge.com'
   - '+.wobocn.com'
   - '+.woc88.com'
   - '+.wocai.de'
@@ -56692,7 +56716,6 @@ payload:
   - '+.wrtnode.cc'
   - '+.wrtnode.com'
   - '+.wrtsz.com'
-  - '+.wrx319.com'
   - '+.ws-dla.com'
   - '+.ws.ksmobile.net'
   - '+.wsaf.net'
@@ -56992,6 +57015,7 @@ payload:
   - '+.wuyoufang.com'
   - '+.wuyouhui.net'
   - '+.wuyousy.com'
+  - '+.wuyouyun.com'
   - '+.wuys.com'
   - '+.wuyuan.cc'
   - '+.wuyublog.com'
@@ -57836,6 +57860,7 @@ payload:
   - '+.xianlu0605.com'
   - '+.xianms.com'
   - '+.xiannanyou.com'
+  - '+.xianniuzu.com'
   - '+.xiannvtu.com'
   - '+.xianpp.com'
   - '+.xianqiao.wang'
@@ -58027,7 +58052,6 @@ payload:
   - '+.xiaomi.net'
   - '+.xiaomi.tw'
   - '+.xiaomiaozai.com'
-  - '+.xiaomicp.com'
   - '+.xiaominet.com'
   - '+.xiaominfo.com'
   - '+.xiaoming.me'
@@ -59733,7 +59757,6 @@ payload:
   - '+.xyqka.com'
   - '+.xyrtv.com'
   - '+.xysb.com'
-  - '+.xyshu8.com'
   - '+.xyshu8.net'
   - '+.xyssdzrmzf.com'
   - '+.xystatic.com'
@@ -60854,6 +60877,7 @@ payload:
   - '+.yiqifa.org'
   - '+.yiqifengtian.com'
   - '+.yiqihao.com'
+  - '+.yiqijian.com'
   - '+.yiqijixiang.com'
   - '+.yiqimaila.com'
   - '+.yiqiming88.com'
@@ -61966,6 +61990,7 @@ payload:
   - '+.yuanu.com'
   - '+.yuanwanw.com'
   - '+.yuanxuxu.com'
+  - '+.yuanyangcoffee.com'
   - '+.yuanyi.biz'
   - '+.yuanyoutao.com'
   - '+.yuanzhexi.com'
@@ -62408,7 +62433,6 @@ payload:
   - '+.yurenty.com'
   - '+.yuriimg.com'
   - '+.yusa.me'
-  - '+.yushanapp.com'
   - '+.yushengny.com'
   - '+.yushexuetang.com'
   - '+.yushin88.com'
@@ -63237,7 +63261,6 @@ payload:
   - '+.zgwhfe.com'
   - '+.zgwhw.com'
   - '+.zgwlmusic.com'
-  - '+.zgwrx.com'
   - '+.zgwt.co'
   - '+.zgwxbbs.com'
   - '+.zgxcfx.com'
