--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1195,7 +1195,6 @@ payload:
   - '+.13377608388.com'
   - '+.133998.com'
   - '+.133china.com'
-  - '+.13400.com'
   - '+.13482896776.com'
   - '+.135-139.com'
   - '+.135019.com'
@@ -2017,7 +2016,6 @@ payload:
   - '+.2088062.com'
   - '+.2088063.com'
   - '+.208xs.com'
-  - '+.20biquge.com'
   - '+.20ju.com'
   - '+.20qu.com'
   - '+.20xs.cc'
@@ -3051,7 +3049,6 @@ payload:
   - '+.365xxy.com'
   - '+.365yg.com'
   - '+.365you.com'
-  - '+.365zn.com'
   - '+.365zzd.com'
   - '+.3663.com'
   - '+.366300.com'
@@ -4600,7 +4597,6 @@ payload:
   - '+.52zxw.com'
   - '+.52zy.com'
   - '+.52zzl.com'
-  - '+.53.net'
   - '+.531314.com'
   - '+.5317wan.com'
   - '+.5321vip.com'
@@ -4965,7 +4961,6 @@ payload:
   - '+.5aivideo.com'
   - '+.5aiyoo.com'
   - '+.5ajob.com'
-  - '+.5alw.com'
   - '+.5any.com'
   - '+.5axxw.com'
   - '+.5azy.com'
@@ -5957,7 +5952,6 @@ payload:
   - '+.7wenku.com'
   - '+.7wenta.com'
   - '+.7wenyi.com'
-  - '+.7wkw.com'
   - '+.7wnews.com'
   - '+.7wsh.com'
   - '+.7wsh.net'
@@ -5975,7 +5969,6 @@ payload:
   - '+.7yzone.com'
   - '+.7zgame.com'
   - '+.7zhan.com'
-  - '+.7zhibo.com'
   - '+.7zhou.com'
   - '+.7zm.com'
   - '+.8-008.com'
@@ -8761,7 +8754,6 @@ payload:
   - '+.antiy.com'
   - '+.antiy.net'
   - '+.antpedia.com'
-  - '+.antpool.com'
   - '+.antriver.com'
   - '+.antrol.com'
   - '+.antsdaq.com'
@@ -9550,7 +9542,6 @@ payload:
   - '+.axnsc.com'
   - '+.axshuyuan.com'
   - '+.axtmy.com'
-  - '+.axtoutiao.com'
   - '+.axuer.com'
   - '+.axure.us'
   - '+.axureshop.com'
@@ -11758,7 +11749,6 @@ payload:
   - '+.booksky.cc'
   - '+.booksn.com'
   - '+.booktxt.com'
-  - '+.booktxt.io'
   - '+.booktxt.net'
   - '+.bookuu.com'
   - '+.bookxnote.com'
@@ -11895,7 +11885,6 @@ payload:
   - '+.broad-ocean.com'
   - '+.broadon.net'
   - '+.broadskytech.com'
-  - '+.brogiao.com'
   - '+.bronzesoft.com'
   - '+.brother-cn.net'
   - '+.brother-movie.com'
@@ -12229,7 +12218,6 @@ payload:
   - '+.byr-navi.com'
   - '+.byr.cc'
   - '+.byr.wiki'
-  - '+.byread.com'
   - '+.bysb.net'
   - '+.byshr.com'
   - '+.bysocket.com'
@@ -12240,6 +12228,7 @@ payload:
   - '+.byte.online'
   - '+.byte008.com'
   - '+.byteacctimg.com'
+  - '+.byteadverts.com'
   - '+.bytebye.com'
   - '+.bytecdn.com'
   - '+.bytecdntp.com'
@@ -14244,7 +14233,6 @@ payload:
   - '+.chinadoudi.com'
   - '+.chinadrtv.com'
   - '+.chinadsl.net'
-  - '+.chinadysj.com'
   - '+.chinadyt.com'
   - '+.chinadz.com'
   - '+.chinadzyl.com'
@@ -16816,7 +16804,6 @@ payload:
   - '+.cshixi.com'
   - '+.cshnkj.com'
   - '+.cshope.net'
-  - '+.cshu360.com'
   - '+.cshufanyi.com'
   - '+.cshxdc.com'
   - '+.cshzw.com'
@@ -17393,7 +17380,6 @@ payload:
   - '+.dadaabc.com'
   - '+.dadagame.com'
   - '+.dadagem.xyz'
-  - '+.dadaizi.com'
   - '+.dadajiasu.com'
   - '+.dadajuan.com'
   - '+.dadakan.com'
@@ -18169,6 +18155,7 @@ payload:
   - '+.denuoexpo.com'
   - '+.deosin.com'
   - '+.dep-star.com'
+  - '+.depeat.com'
   - '+.dephir.com'
   - '+.depin.com'
   - '+.deppon.com'
@@ -18470,6 +18457,7 @@ payload:
   - '+.dianshige.com'
   - '+.dianshihome.com'
   - '+.dianshijia.com'
+  - '+.dianshunxinxi.com'
   - '+.diansu-cdn.net'
   - '+.diantoushi.com'
   - '+.diantui.net'
@@ -19251,7 +19239,6 @@ payload:
   - '+.doudou3.com'
   - '+.doudouad.com'
   - '+.doudouba.com'
-  - '+.doudoubianli.com'
   - '+.doudoubird.com'
   - '+.doudoudm.com'
   - '+.doufan.tv'
@@ -20766,6 +20753,7 @@ payload:
   - '+.emeor.com'
   - '+.emepu.com'
   - '+.emilhk.com'
+  - '+.emilyliangfilms.com'
   - '+.emjob.com'
   - '+.emlinix.com'
   - '+.emlog.net'
@@ -21558,7 +21546,6 @@ payload:
   - '+.fangdr.com'
   - '+.fangfa.net'
   - '+.fangfaku.net'
-  - '+.fanghaofang.com'
   - '+.fanghouguo.com'
   - '+.fanghuafu.com'
   - '+.fanghuihui.com'
@@ -21963,7 +21950,6 @@ payload:
   - '+.feiyangedu.com'
   - '+.feiyicheng.com'
   - '+.feiyit.com'
-  - '+.feiyng.com'
   - '+.feiyu.com'
   - '+.feiyuapi.com'
   - '+.feiyuemu.com'
@@ -22063,7 +22049,6 @@ payload:
   - '+.fengyan.cc'
   - '+.fengye.cool'
   - '+.fengyitong.name'
-  - '+.fengyu.cc'
   - '+.fengyu.moe'
   - '+.fengyuansufen.com'
   - '+.fengyuncx.com'
@@ -23016,7 +23001,6 @@ payload:
   - '+.fxxw.net'
   - '+.fxxww.net'
   - '+.fxxz.com'
-  - '+.fxyfmp.com'
   - '+.fxzhj.com'
   - '+.fxzhjapp.com'
   - '+.fxzygc.com'
@@ -23185,7 +23169,6 @@ payload:
   - '+.galstars.net'
   - '+.galsun.com'
   - '+.galudisu.info'
-  - '+.galvanic.name'
   - '+.gamdream.com'
   - '+.game-as.com'
   - '+.game-props.com'
@@ -23410,7 +23393,6 @@ payload:
   - '+.gate-dhgames.com'
   - '+.gateface.com'
   - '+.gatewang.com'
-  - '+.gateway.craft.moe'
   - '+.gather-dns.com'
   - '+.gathernames.com'
   - '+.gaussianoptics.com'
@@ -23445,7 +23427,6 @@ payload:
   - '+.gcdcrs.com'
   - '+.gcgd.net'
   - '+.gchao.com'
-  - '+.gche8.com'
   - '+.gcihotel.net'
   - '+.gcimg.net'
   - '+.gcjc.com'
@@ -24031,7 +24012,6 @@ payload:
   - '+.globalhardwares.com'
   - '+.globalimporter.net'
   - '+.globalizex.com'
-  - '+.globalmarket.com'
   - '+.globalmil.com'
   - '+.globalpingbao.com'
   - '+.globalscanner.com'
@@ -25218,6 +25198,7 @@ payload:
   - '+.gzrsa.com'
   - '+.gzshandi.com'
   - '+.gzshangshan.net'
+  - '+.gzshuimh.com'
   - '+.gzshujuhui.com'
   - '+.gzsjyzx.com'
   - '+.gzsjzx.com'
@@ -25613,7 +25594,6 @@ payload:
   - '+.hangjizulin.com'
   - '+.hangkong.com'
   - '+.hangomart.com'
-  - '+.hangowa.com'
   - '+.hangpu-topsys.com'
   - '+.hanguangbaihuo.com'
   - '+.hanguu.com'
@@ -26541,7 +26521,6 @@ payload:
   - '+.helpton.com'
   - '+.heluowenhua.net'
   - '+.hemabt.com'
-  - '+.hemadaili.com'
   - '+.hemajy.com'
   - '+.hemamax.com'
   - '+.hemanc.com'
@@ -27779,7 +27758,6 @@ payload:
   - '+.hsw2013.com'
   - '+.hsweb.me'
   - '+.hswkzy.com'
-  - '+.hswnjz.com'
   - '+.hsxiang.com'
   - '+.hsxxad.com'
   - '+.hsybyh.com'
@@ -28773,7 +28751,6 @@ payload:
   - '+.hzbenet.com'
   - '+.hzbh.com'
   - '+.hzbike.com'
-  - '+.hzbluebutterfly.com'
   - '+.hzbook.com'
   - '+.hzbxm.com'
   - '+.hzc.com'
@@ -30637,7 +30614,6 @@ payload:
   - '+.itcodemonkey.com'
   - '+.itcpn.net'
   - '+.itczh.com'
-  - '+.itdaan.com'
   - '+.itdabao.com'
   - '+.itdcw.com'
   - '+.itdhz.com'
@@ -31023,7 +30999,6 @@ payload:
   - '+.j-smu.com'
   - '+.j1.com'
   - '+.j1health.com'
-  - '+.j3pz.com'
   - '+.j66.net'
   - '+.j7994.com'
   - '+.j888s.xyz'
@@ -31185,7 +31160,6 @@ payload:
   - '+.jd-df.com'
   - '+.jd-ex.com'
   - '+.jd-fm.com'
-  - '+.jd-tv.com'
   - '+.jd.co'
   - '+.jd.com'
   - '+.jd.hk'
@@ -32434,7 +32408,6 @@ payload:
   - '+.jmd-china.com'
   - '+.jmdedu.com'
   - '+.jmeii.com'
-  - '+.jmf6.com'
   - '+.jmfans.com'
   - '+.jmgle.com'
   - '+.jmgo.com'
@@ -32719,7 +32692,6 @@ payload:
   - '+.jrpxw.com'
   - '+.jrqiwen.com'
   - '+.jrqzw.net'
-  - '+.jrsmw.com'
   - '+.jrszw.com'
   - '+.jrteck.com'
   - '+.jrtj120.com'
@@ -33906,7 +33878,6 @@ payload:
   - '+.kentier.com'
   - '+.kenuonet.com'
   - '+.kenweini.com'
-  - '+.kenwen.com'
   - '+.kepingtong.com'
   - '+.kepuchina.org'
   - '+.kepusky.com'
@@ -34806,7 +34777,6 @@ payload:
   - '+.kuyinyun.com'
   - '+.kuyiso.com'
   - '+.kuyoo.com'
-  - '+.kuyubox.com'
   - '+.kuyumall.com'
   - '+.kuyun.com'
   - '+.kuzhazha.com'
@@ -35200,8 +35170,6 @@ payload:
   - '+.laogu.cc'
   - '+.laogu.com'
   - '+.laogu.wang'
-  - '+.laohanzong.com'
-  - '+.laohanzong1.com'
   - '+.laohu.com'
   - '+.laohu8.com'
   - '+.laohuabao.com'
@@ -35456,7 +35424,6 @@ payload:
   - '+.lecuntao.com'
   - '+.leda13.com'
   - '+.ledanji.com'
-  - '+.ledao.so'
   - '+.ledboke.com'
   - '+.ledcax.com'
   - '+.ledchina-sh.com'
@@ -35609,6 +35576,7 @@ payload:
   - '+.lenovomobile.com'
   - '+.lenovonetapp.com'
   - '+.lenovonowgo.com'
+  - '+.lenovosj.com'
   - '+.lenovots.com'
   - '+.lenovouat.com'
   - '+.lenovowap.com'
@@ -36312,7 +36280,6 @@ payload:
   - '+.lippt.com'
   - '+.liqihuoke.com'
   - '+.liqinyi.com'
-  - '+.liqu.com'
   - '+.liquidnetwork.com'
   - '+.liqunshop.com'
   - '+.liqwei.com'
@@ -36897,7 +36864,6 @@ payload:
   - '+.lopopoo.com'
   - '+.lopss.com'
   - '+.lorefree.com'
-  - '+.lorike.com'
   - '+.losala.com'
   - '+.losking.com'
   - '+.lossyou.com'
@@ -38259,7 +38225,6 @@ payload:
   - '+.meetwhale.com'
   - '+.meetzoom.net'
   - '+.meeuapp.net'
-  - '+.mefeng.net'
   - '+.megaemoji.com'
   - '+.megajoy.com'
   - '+.megoal.org'
@@ -38382,7 +38347,6 @@ payload:
   - '+.meiqiu.me'
   - '+.meiquankejib.com'
   - '+.meiquankejih.com'
-  - '+.meirenshang.com'
   - '+.meiridazhe.com'
   - '+.meiritv.net'
   - '+.meiriyiwen.com'
@@ -38831,6 +38795,7 @@ payload:
   - '+.mikannovel.com'
   - '+.mikechen.cc'
   - '+.mikecrm.com'
+  - '+.mikenn.com'
   - '+.mikesent-awareness-02.com'
   - '+.mikesent.net'
   - '+.mikewootc.com'
@@ -39150,7 +39115,6 @@ payload:
   - '+.mlzcn.com'
   - '+.mm.com'
   - '+.mm111.net'
-  - '+.mm12581.com'
   - '+.mm131.kim'
   - '+.mm138.com'
   - '+.mm2hservices.com'
@@ -39664,7 +39628,6 @@ payload:
   - '+.msjcqm.com'
   - '+.msjxxz.com'
   - '+.mskjf.com'
-  - '+.msl.la'
   - '+.mslzz.com'
   - '+.msmartlife.com'
   - '+.msmbjp.com'
@@ -40236,7 +40199,6 @@ payload:
   - '+.name1688.com'
   - '+.name2012.com'
   - '+.name5566.com'
-  - '+.namedq.com'
   - '+.nameidi.com'
   - '+.namepre.com'
   - '+.namesilopro.com'
@@ -40982,7 +40944,6 @@ payload:
   - '+.nmweidian.com'
   - '+.nmysyey.com'
   - '+.nmyygs.com'
-  - '+.nmzc02.com'
   - '+.nmzh.net'
   - '+.nmzol.com'
   - '+.nmzzlhwlkj.com'
@@ -41412,6 +41373,7 @@ payload:
   - '+.oct-sh.com'
   - '+.octbay.com'
   - '+.octeshow.com'
+  - '+.octgo.com'
   - '+.octholding.com'
   - '+.octhotels.com'
   - '+.octinn.com'
@@ -42772,6 +42734,7 @@ payload:
   - '+.picosmos.net'
   - '+.picp.io'
   - '+.picp.net'
+  - '+.picsays.com'
   - '+.pictureknow.com'
   - '+.picup.shop'
   - '+.picxiaobai.com'
@@ -43005,6 +42968,7 @@ payload:
   - '+.platinum-traveller.com'
   - '+.platinumchina.com'
   - '+.play-analytics.com'
+  - '+.play.craft.moe'
   - '+.play68.com'
   - '+.play700.com'
   - '+.play86.com'
@@ -43333,7 +43297,6 @@ payload:
   - '+.prefershare.com'
   - '+.preludeid.com'
   - '+.premedglobal.com'
-  - '+.press-sci.com'
   - '+.prestolite-bj.com'
   - '+.prfc-cn.com'
   - '+.prfog.com'
@@ -43913,7 +43876,6 @@ payload:
   - '+.qiandd.com'
   - '+.qianduan.com'
   - '+.qianduanblog.com'
-  - '+.qianduanfan.com'
   - '+.qiandw.com'
   - '+.qianfan123.com'
   - '+.qianfan365.com'
@@ -43962,6 +43924,7 @@ payload:
   - '+.qianmoqi.com'
   - '+.qianmu.org'
   - '+.qianniu.com'
+  - '+.qianp.com'
   - '+.qianpailive.com'
   - '+.qianpen.com'
   - '+.qianpin.com'
@@ -44309,7 +44272,6 @@ payload:
   - '+.qionghaif.com'
   - '+.qiongming.com'
   - '+.qiongri.com'
-  - '+.qipacao.com'
   - '+.qipai007.com'
   - '+.qipaifan.com'
   - '+.qipamaijia.com'
@@ -45448,7 +45410,6 @@ payload:
   - '+.redrock.team'
   - '+.redsh.com'
   - '+.redshu.com'
-  - '+.redstaraward.org'
   - '+.redsun-rp.com'
   - '+.redsunsets.ml'
   - '+.redyue.com'
@@ -45557,6 +45518,7 @@ payload:
   - '+.repian.com'
   - '+.repianimg.com'
   - '+.replays.net'
+  - '+.rerevod.com'
   - '+.resclassaction.com'
   - '+.resheji.com'
   - '+.resistor.today'
@@ -46599,7 +46561,6 @@ payload:
   - '+.sczgzb.com'
   - '+.sczhaosheng.com'
   - '+.sczl123.com'
-  - '+.sczlb.com'
   - '+.sczlcts.com'
   - '+.sczprc.com'
   - '+.sczshz.net'
@@ -46873,9 +46834,6 @@ payload:
   - '+.segmentfault.net'
   - '+.segotep.com'
   - '+.segwayrobotics.com'
-  - '+.sehuiyao34.com'
-  - '+.sehuiyao49.xyz'
-  - '+.sehy66.com'
   - '+.seidns.com'
   - '+.seinfeldtv.com'
   - '+.seisman.info'
@@ -47518,7 +47476,6 @@ payload:
   - '+.shenzhenshui.com'
   - '+.shenzhentong.com'
   - '+.shenzhentour.com'
-  - '+.shenzhenware.com'
   - '+.shepai1688.com'
   - '+.shequfu.com'
   - '+.shequfu.net'
@@ -49183,7 +49140,6 @@ payload:
   - '+.sotwm.com'
   - '+.sou-yun.com'
   - '+.souaiche.com'
-  - '+.soubct.com'
   - '+.soucai.com'
   - '+.souche-fin.com'
   - '+.souche-inc.com'
@@ -49261,7 +49217,6 @@ payload:
   - '+.souwifi.com'
   - '+.souwoo.com'
   - '+.souxue8.com'
-  - '+.souxuexiao.com'
   - '+.souya.com'
   - '+.souyidai.com'
   - '+.souyue.mobi'
@@ -49613,7 +49568,6 @@ payload:
   - '+.stjfw.net'
   - '+.stjulianc.org'
   - '+.stjunshi.com'
-  - '+.stjy.net'
   - '+.stkey.win'
   - '+.stklt.com'
   - '+.stlswm.com'
@@ -49622,6 +49576,7 @@ payload:
   - '+.stmybj.com'
   - '+.stnn.cc'
   - '+.stnts.com'
+  - '+.stnye.cc'
   - '+.stock8m.com'
   - '+.stockhn.com'
   - '+.stockstar.com'
@@ -49888,6 +49843,7 @@ payload:
   - '+.sunmingxia.com'
   - '+.sunmnet.com'
   - '+.sunnada.com'
+  - '+.sunny126.com'
   - '+.sunny90.com'
   - '+.sunnychina.com'
   - '+.sunnyos.com'
@@ -50088,7 +50044,6 @@ payload:
   - '+.switchvip.com'
   - '+.swjoy.com'
   - '+.swkong.com'
-  - '+.swlidc.com'
   - '+.swliuxue.com'
   - '+.swlsbj.com'
   - '+.swoft.org'
@@ -52668,6 +52623,9 @@ payload:
   - '+.tui18.com'
   - '+.tui56.com'
   - '+.tuiaaaa.com'
+  - '+.tuiaaae.com'
+  - '+.tuiaaaf.com'
+  - '+.tuiaaag.com'
   - '+.tuiabq.com'
   - '+.tuiapple.com'
   - '+.tuiayonghu.com'
@@ -53076,7 +53034,6 @@ payload:
   - '+.tzgcjie.com'
   - '+.tzhubo.com'
   - '+.tzhwcc.com'
-  - '+.tzidc.com'
   - '+.tzidt.com'
   - '+.tzjxl.com'
   - '+.tzkameng.com'
@@ -53306,6 +53263,7 @@ payload:
   - '+.ugsnx.com'
   - '+.ugubl.net'
   - '+.ugxsd.com'
+  - '+.uhandak.com'
   - '+.uhgal.com'
   - '+.uhomecp.com'
   - '+.uhomes.com'
@@ -54548,7 +54506,6 @@ payload:
   - '+.w3cbus.com'
   - '+.w3cfuns.com'
   - '+.w3chtml.com'
-  - '+.w3cl.com'
   - '+.w3cplus.com'
   - '+.w3cschool.cc'
   - '+.w3cshare.com'
@@ -54744,7 +54701,6 @@ payload:
   - '+.wangl903.com'
   - '+.wangle.com'
   - '+.wanglibao.com'
-  - '+.wanglids.com'
   - '+.wanglu.info'
   - '+.wangluoliuxing.com'
   - '+.wanglutech.com'
@@ -54929,7 +54885,6 @@ payload:
   - '+.waqiang.com'
   - '+.warcraftchina.com'
   - '+.warestage.com'
-  - '+.wargamecn.com'
   - '+.warmcolor.net'
   - '+.warsongmobile.com'
   - '+.warstudy.com'
@@ -56599,7 +56554,6 @@ payload:
   - '+.woso100.com'
   - '+.wosouyun.com'
   - '+.wotobang.com'
-  - '+.wotougao.com'
   - '+.wotrus.com'
   - '+.wotucdn.com'
   - '+.wotula.com'
@@ -57555,7 +57509,6 @@ payload:
   - '+.xdnote.com'
   - '+.xdnphb.com'
   - '+.xdocin.com'
-  - '+.xdoor.cc'
   - '+.xdow.net'
   - '+.xdplt.com'
   - '+.xdpvp.com'
@@ -58654,6 +58607,7 @@ payload:
   - '+.xinxuezl.com'
   - '+.xinxuezx.com'
   - '+.xinxunwang.com'
+  - '+.xinxunwei.com'
   - '+.xinyali.net'
   - '+.xinyan.com'
   - '+.xinyaoyao.com'
@@ -58829,7 +58783,6 @@ payload:
   - '+.xizhibei.me'
   - '+.xizi.com'
   - '+.xiziquan.com'
-  - '+.xiziwang.net'
   - '+.xj-gr.com'
   - '+.xj-zp.com'
   - '+.xj120.com'
@@ -59732,7 +59685,6 @@ payload:
   - '+.xyhospital.com'
   - '+.xyhqsh.com'
   - '+.xyhtml5.com'
-  - '+.xyhust-meri.com'
   - '+.xyimg.net'
   - '+.xyinzhe.com'
   - '+.xyj.link'
@@ -59803,7 +59755,6 @@ payload:
   - '+.xyzmdzs.com'
   - '+.xyzs.com'
   - '+.xyzsq.com'
-  - '+.xyzysmx.com'
   - '+.xz-juming.com'
   - '+.xz.com'
   - '+.xz577.com'
@@ -60115,6 +60066,7 @@ payload:
   - '+.yaxinde.com'
   - '+.yaxuntuhang.com'
   - '+.yaya.love'
+  - '+.yayays.com'
   - '+.yayigou.net'
   - '+.yayihouse.com'
   - '+.yaypool.com'
@@ -60758,7 +60710,6 @@ payload:
   - '+.yingmi.com'
   - '+.yingmile.com'
   - '+.yingming.net'
-  - '+.yingmoo.com'
   - '+.yingpaigame.com'
   - '+.yingshe.com'
   - '+.yingsheng.com'
@@ -62682,7 +62633,6 @@ payload:
   - '+.yytad.com'
   - '+.yytcdn.com'
   - '+.yytek.com'
-  - '+.yytgjjk.com'
   - '+.yytingli.com'
   - '+.yyuap.com'
   - '+.yyuasa.com'
@@ -62831,7 +62781,6 @@ payload:
   - '+.zampdsp.com'
   - '+.zamplink.net'
   - '+.zamplus.com'
-  - '+.zamptrak.com'
   - '+.zan-shang.com'
   - '+.zanba.com'
   - '+.zanbai.com'
@@ -63146,7 +63095,6 @@ payload:
   - '+.zgdydyxh.com'
   - '+.zgdzqw.com'
   - '+.zgeci.com'
-  - '+.zgflzxzx.org'
   - '+.zgfwgj.com'
   - '+.zgfxnews.com'
   - '+.zgfznews.com'
@@ -63521,7 +63469,6 @@ payload:
   - '+.zhefengle.com'
   - '+.zhejiangmuseum.com'
   - '+.zhejiangqinghe.com'
-  - '+.zhejiangweiniu.com'
   - '+.zhejie.com'
   - '+.zhekouo.com'
   - '+.zhelaoda.com'
@@ -63990,7 +63937,6 @@ payload:
   - '+.zhongyaoyi.com'
   - '+.zhongye.net'
   - '+.zhongyegongkao.com'
-  - '+.zhongyidiantong.com'
   - '+.zhongyiiot.com'
   - '+.zhongyiju360.com'
   - '+.zhongyishangwu.com'
@@ -64562,7 +64508,6 @@ payload:
   - '+.zjpost.com'
   - '+.zjpubservice.com'
   - '+.zjqbj.com'
-  - '+.zjqimeng.com'
   - '+.zjqk110.com'
   - '+.zjqll.com'
   - '+.zjrc.com'
@@ -64641,7 +64586,6 @@ payload:
   - '+.zkhcsy.com'
   - '+.zkii.net'
   - '+.zking.com'
-  - '+.zkjxt.com'
   - '+.zkl2333.com'
   - '+.zkoffcn.com'
   - '+.zkokh.com'
@@ -65520,7 +65464,6 @@ payload:
   - '+.zzxdc.com'
   - '+.zzxw.net'
   - '+.zzxy.net'
-  - '+.zzyas.com'
   - '+.zzyb.org'
   - '+.zzydb.com'
   - '+.zzyedu.org'
